# CSCI170

./: ben_s_hw1.ml  ben_s_hw2.ml  json_parsing.ml  json_parsing_test_startercode.ml  lab2.ml  lab4.ml  map_avl.ml  mutual_recursion-1.ml  test.ml
hw3/: hw3.ml  hw3test.ml  (+1 more)
hw3/_build/: .db  (+2 more)
hw3/_build/default/: dune  hw3.cma  hw3.cmxa  hw3.cmxs  hw3test.bc  hw3test.ml  json.cma  json.cmxa  json.cmxs  json.ml  json_structures.cma  json_structures.cmxa  json_structures.cmxs
hw3/_build/default/.hw3.objs/byte/: hw3.cmi  hw3.cmo  hw3.cmt
hw3/_build/default/.hw3.objs/native/: hw3.cmx
hw3/_build/default/.hw3test.eobjs/byte/: dune__exe__Hw3test.cmi  dune__exe__Hw3test.cmo  dune__exe__Hw3test.cmt
hw3/_build/default/.hw3test.eobjs/native/: dune__exe__Hw3test.cmx
hw3/_build/default/.json.objs/byte/: json.cmi  json.cmo  json.cmt
hw3/_build/default/.json.objs/native/: json.cmx
hw3/_build/default/.json_structures.objs/byte/: json_structures.cmi  json_structures.cmo  json_structures.cmt  json_structures__Parsed_complete_bus.cmi  json_structures__Parsed_complete_bus.cmo  json_structures__Parsed_complete_bus.cmt  json_structures__Parsed_medium_bus.cmi  json_structures__Parsed_medium_bus.cmo  json_structures__Parsed_medium_bus.cmt  json_structures__Parsed_small_bus.cmi  json_structures__Parsed_small_bus.cmo  json_structures__Parsed_small_bus.cmt
hw3/_build/default/.merlin-conf/: exe-hw3test  lib-hw3  lib-json  lib-json_structures
hw3/_build/default/.utop/: utop.ml-gen
hw4_s25/: dune  hw4.ml  hw4test.ml  json.ml
hw4_s25/__MACOSX/: ._dune-project  ._hw4.ml  ._hw4test.ml
(+12 files in other folders)
