(library
 (name hw3)
 (libraries json json_structures)
 (modules hw3))


(library
 (name json_structures)
 (libraries json)
 (modules parsed_complete_bus
   parsed_medium_bus
   parsed_small_bus))

(library
 (name json)
 (modules json))

(tests
 (names hw3test)
 (modules hw3test)
 (libraries hw3))

(env
  (dev
    (flags (:standard -warn-error -A -w -27 -w -39 -w -33 -w -26))))
